crates/nx-syntax/tests/fixtures/valid/component-extends.nx
component <NxSearchUi extends SearchBase showSpinner:bool = false /> = {
    <SearchBox />
}
