crates/nx-syntax/tests/fixtures/invalid/component-inheritance-multiple-bases.nx
component <SearchBox extends SearchBase, QueryBase /> = {
    <button />
}
